--- a/README
+++ b/README
@@ -22,6 +22,7 @@ Application Options:
   -i, --icon-type                  Set icon type ('standard', 'notification' or 'symbolic')
   -l, --low-level                  Set low battery level (in percent)
   -r, --critical-level             Set critical battery level (in percent)
+  -f, --full-level                 Set full battery level (in percent)
   -o, --command-low-level          Command to execute when low battery level is reached
   -c, --command-critical-level     Command to execute when critical battery level is reached
   -x, --command-left-click         Command to execute when left clicking on tray icon
